--- a/docker-images/scalemae_ub22.04-cuda12-cudnn8-py3.9-pytroch/Dockerfile
+++ b/docker-images/scalemae_ub22.04-cuda12-cudnn8-py3.9-pytroch/Dockerfile
@@ -4,7 +4,7 @@ FROM nvidia/cuda:12.1.1-cudnn8-runtime-ubuntu22.04 as base
 # Install python and pip
 RUN apt-get update && apt-get upgrade -y \
     && apt-get install -y python3 python3-pip \
-    && apt install -y wget vim nano tmux\
+    && apt install -y wget vim nano tmux git\
     && apt install -y htop ffmpeg libsm6 libxext6 \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
@@ -26,11 +26,7 @@ RUN conda create -n scalemae -y python=3.9 geopandas rasterio shapely
 
 SHELL ["conda", "run", "-n", "scalemae", "/bin/bash", "-c"]
 
-RUN conda run -n scalemae /bin/bash -c conda install pytorch torchvision torchaudio pytorch-cuda=12.1 -c pytorch -c nvidia
-
-RUN apt-get update  \
-    && apt-get upgrade -y  \
-    && apt-get install  # buildkit
+RUN conda install pytorch torchvision torchaudio pytorch-cuda=12.1 -c pytorch -c nvidia
 RUN conda install -y conda-forge::kornia gdal \
     && pip install torchgeo opencv-python classy_vision wandb tensorboard
 
@@ -39,5 +35,3 @@ RUN git clone https://github.com/swiss-territorial-data-lab/scale-mae.git
 
 WORKDIR "scale-mae"
 RUN pip install -e .
-
-CMD /bin/bash
